Fixed bug #60306 (Characters lost while converting from cp936 to utf8)

git-svn-id: http://svn.php.net/repository/php/php-src/trunk@319452 c90b9560-bf6c-de11-be94-00142212c4b1